--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">QTest</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="remember_me">Remember Me</string>
+    <string name="username">Username</string>
+    <string name="google_signin_failed">Google Sign in failed</string>
+    <string name="sign_in_with_google">Sign In with Google</string>
+    <string name="client_id">334548647127-i3r3lihgrkb57gcp4j0to34h1g83gvla.apps.googleusercontent.com</string>
 </resources>
