--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="facebook_app_id">233803317648897</string>
     <string name="fb_login_protocol_scheme">fb233803317648897</string>
     <string name="client_id">334548647127-h3btt8nqjebnobeentau4ptkqh5mbste.apps.googleusercontent.com</string>
+    <string name="search_products">Search Products</string>
+    <string name="blank">-</string>
 </resources>
